# kyotu-project-operator

./: .gitignore  .pants-ignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: build.yml  helm.yaml
charts/kyotu-project-operator/: Chart.yaml  values.yaml
charts/kyotu-project-operator/templates/: NOTES.txt  _helpers.tpl  cluster_role.yaml  cluster_role_binding.yaml  crd.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/kyotu-project-operator/templates/tests/: test-connection.yaml
manifests/: crd.yaml  project_crd.yaml  project_example.yaml  project_example_qa.yaml
src/: controller.rs  finalizer.rs  gitlab.rs  lib.rs  main.rs  metrics.rs  namespace.rs  project.rs  project_crd.rs  rbacs.rs  repository.rs  secret.rs
templates/: argo_tmpl.yaml  rbac_tmpl.yaml
