[package]
name = "kyotu-project-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
tera = "1.12.1"
kube = { version = "0.82.2", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_24"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.18"
anyhow = "1.0.51"
log = "0.4.14"
tracing = "0.1.29"
thiserror = "1.0.30"
schemars = "0.8.6"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
actix-web = "4.3.1"
dotenv = "0.15.0"
tracing-actix-web = "0.7.3"
reqwest = { version = "0.11.6", features = ["json"] }
mockito = "1.0.2"
base64 = "0.21.0"