[package]
name = "kyotu-project-operator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
tera = "1.18.1"
kube = { version = "0.82.2", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_24"] }
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.28"
anyhow = "1.0.71"
log = "0.4.17"
tracing = "0.1.37"
thiserror = "1.0.40"
schemars = "0.8.12"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
actix-web = "4.3.1"
dotenv = "0.15.0"
tracing-actix-web = "0.7.4"
reqwest = { version = "0.11.17", features = ["json"] }
mockito = "1.0.2"
base64 = "0.21.0"