[package]
name = "kyotu-project-operator"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kyotu-project-operator"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
git2 = "0.18.1"
tera = "1.19.0"
kube = { version = "0.87.1", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["v1_24"] }
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.28"
anyhow = "1.0.71"
log = "0.4.18"
tracing = "0.1.37"
thiserror = "1.0.40"
schemars = "0.8.12"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
actix-web = "4.3.1"
dotenv = "0.15.0"
tracing-actix-web = "0.7.5"
reqwest = { version = "0.11.18", features = ["json"] }
mockito = "1.0.2"
base64 = "0.21.2"
validator = { version="0.16.0", features=["derive"] }
lazy_static = "1.4.0"
regex = "1.8.3"
prometheus = "0.13.3"
chrono = { version  = "0.4.26", default-features = false, features = ["serde"] }
